tests/Rules/Aria/Fixtures/valid/list_with_items.html.twig
<div role="list">
  <div role="listitem">Item</div>
</div>
