tests/Rules/Aria/Fixtures/invalid/role_table_no_row.html.twig
{# 1 errors #}
<html>
  <body>
    <div role="table"></div>
  </body>
</html>
